@@ -72,38 +72,6 @@ name|cli
 operator|.
 name|util
 operator|.
-name|CLITestCmd
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|hadoop
-operator|.
-name|cli
-operator|.
-name|util
-operator|.
-name|CLICommand
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|hadoop
-operator|.
-name|cli
-operator|.
-name|util
-operator|.
 name|CommandExecutor
 operator|.
 name|Result
@@ -135,6 +103,20 @@ operator|.
 name|fs
 operator|.
 name|CommonConfigurationKeys
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|util
+operator|.
+name|Shell
 import|;
 end_import
 
@@ -1801,6 +1783,12 @@ name|cleanupCommands
 init|=
 literal|null
 decl_stmt|;
+DECL|field|runOnWindows
+name|boolean
+name|runOnWindows
+init|=
+literal|true
+decl_stmt|;
 annotation|@
 name|Override
 DECL|method|startDocument ()
@@ -1978,6 +1966,27 @@ block|{
 name|td
 operator|.
 name|setTestDesc
+argument_list|(
+name|charString
+argument_list|)
+expr_stmt|;
+block|}
+elseif|else
+if|if
+condition|(
+name|qName
+operator|.
+name|equals
+argument_list|(
+literal|"windows"
+argument_list|)
+condition|)
+block|{
+name|runOnWindows
+operator|=
+name|Boolean
+operator|.
+name|parseBoolean
 argument_list|(
 name|charString
 argument_list|)
@@ -2175,6 +2184,16 @@ literal|"test"
 argument_list|)
 condition|)
 block|{
+if|if
+condition|(
+operator|!
+name|Shell
+operator|.
+name|WINDOWS
+operator|||
+name|runOnWindows
+condition|)
+block|{
 name|testsFromConfigFile
 operator|.
 name|add
@@ -2182,9 +2201,14 @@ argument_list|(
 name|td
 argument_list|)
 expr_stmt|;
+block|}
 name|td
 operator|=
 literal|null
+expr_stmt|;
+name|runOnWindows
+operator|=
+literal|true
 expr_stmt|;
 block|}
 elseif|else
